test_regress/t/t_tri_pullvec_bad.out
%Error: t/t_tri_pullvec_bad.v:13:13: Unsupported: Conflicting pull directions.
                                   : ... In instance t
   pulldown p1 (w[1]);
            ^~
        t/t_tri_pullvec_bad.v:12:11: ... Location of conflicting pull.
   pullup p0 (w[0]);
          ^~
%Error: t/t_tri_pullvec_bad.v:14:13: Unsupported: Conflicting pull directions.
                                   : ... In instance t
   pulldown p2 (w[2]);
            ^~
        t/t_tri_pullvec_bad.v:12:11: ... Location of conflicting pull.
   pullup p0 (w[0]);
          ^~
%Error: Exiting due to
